--- a/app/src/main/res/layout/activity_seleccion_menu.xml
+++ b/app/src/main/res/layout/activity_seleccion_menu.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="5dp"
@@ -27,31 +27,18 @@
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
             android:textColor="?android:attr/textColorPrimary"
-            android:layout_marginBottom="15dp" />
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:layout_marginBottom="30dp">
-
-            <Button
-                android:text="@string/guardar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/bt_seleccion_menu_guardar"
-                android:isScrollContainer="false" />
-        </LinearLayout>
+            android:layout_marginBottom="15dp"
+            android:layout_weight="0" />
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/rv_seleccion_menu"
             android:layout_marginBottom="0dp"
-            android:layout_weight="0">
+            android:layout_weight="0"
+            android:layout_height="430dp">
 
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
+
 </RelativeLayout>
