Finalizado el servicio de listado y filtrado de menús

--- a/app/src/main/res/layout/activity_listar_menus.xml
+++ b/app/src/main/res/layout/activity_listar_menus.xml
@@ -43,10 +43,11 @@
 
         </LinearLayout>
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/lv_menus_plantas" />
+            android:layout_weight="1"
+            android:id="@+id/rv_listar_menus" />
 
     </LinearLayout>
 </RelativeLayout>
