--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorButton">#6a79cc</color>
     <color name="colorListViewSelected">#8c9bf0</color>
     <color name="blueText">#006df0</color>
+    <color name="background_inurse_gris">#f4f3f3</color>
 </resources>
