--- a/app/src/main/res/layout/activity_listar_solicitudes.xml
+++ b/app/src/main/res/layout/activity_listar_solicitudes.xml
@@ -27,20 +27,31 @@
             android:layout_marginBottom="15dp">
 
             <TextView
-                android:text="@string/filtrar_por_estado"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/filtrar_por_estado"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:textColor="?android:attr/textColorPrimary"
-                android:fontFamily="sans-serif" />
+                android:textStyle="bold" />
 
-            <Spinner
-                android:layout_width="159dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/cb_filtro_listar_solicitudes"
-                android:layout_weight="0.19" />
+            <LinearLayout
+                android:layout_width="165dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/cardview_border"
+                android:orientation="horizontal">
 
+                <Spinner
+                    android:id="@+id/cb_filtro_listar_solicitudes"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
