--- a/app/src/main/res/layout/activity_mis_solicitudes.xml
+++ b/app/src/main/res/layout/activity_mis_solicitudes.xml
@@ -4,51 +4,63 @@
     android:id="@+id/activity_mis_solicitudes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_inurse_gris"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.pacientes.MisSolicitudesActivity"
-    android:background="@color/colorBackground">
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.pacientes.MisSolicitudesActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="15dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:text="@string/filtrar_por_estado"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/filtrar_por_estado"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:textColor="?android:attr/textColorPrimary"
-                android:fontFamily="sans-serif" />
+                android:textStyle="bold" />
 
-            <Spinner
-                android:layout_width="159dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/cb_filtro_mis_solicitudes"
-                android:layout_weight="0.19" />
+            <LinearLayout
+                android:layout_width="165dp"
+                android:layout_height="35dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/cardview_border"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/cb_filtro_mis_solicitudes"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_mis_solicitudes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/rv_mis_solicitudes">
+            android:layout_weight="1">
 
         </android.support.v7.widget.RecyclerView>
 
