--- a/app/src/main/res/layout/activity_seleccion_menu.xml
+++ b/app/src/main/res/layout/activity_seleccion_menu.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_seleccion_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_inurse_gris"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,31 +12,34 @@
     tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.pacientes.SeleccionMenuActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
+        android:orientation="vertical"
         android:weightSum="1">
 
         <TextView
-            android:text="@string/seleccione_el_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textColor="?android:attr/textColorPrimary"
             android:layout_marginBottom="15dp"
-            android:layout_weight="0" />
+            android:layout_weight="0"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/seleccione_el_menu"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:textColor="@color/colorPrimary"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
             android:id="@+id/rv_seleccion_menu"
+            android:layout_width="match_parent"
+            android:layout_height="430dp"
             android:layout_marginBottom="0dp"
-            android:layout_weight="0"
-            android:layout_height="430dp">
+            android:layout_weight="0">
 
         </android.support.v7.widget.RecyclerView>
 
