--- a/app/src/main/res/layout/cardview_listar_solicitudes.xml
+++ b/app/src/main/res/layout/cardview_listar_solicitudes.xml
@@ -11,159 +11,174 @@
         android:id="@+id/cv_listar_solicitudes">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:background="@drawable/cardview_border"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="30dp"
+                android:background="@color/colorPrimary"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp">
 
                 <TextView
-                    android:text="@string/prioridad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/prioridad"
+                    android:textColor="@android:color/white"
+                    android:textStyle="normal|bold" />
+
+                <TextView
+                    android:id="@+id/tv_listar_solicitudes_prioridad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_weight="0.16"
+                    android:textColor="@android:color/white" />
+
+                <TextView
+                    android:id="@+id/tv_listar_solicitudes_fecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/estado"
                     android:textColor="?android:attr/textColorPrimary"
                     android:textStyle="normal|bold" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_listar_solicitudes_prioridad"
-                    android:layout_weight="0.16"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_listar_solicitudes_fecha"
-                    android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textAlignment="textEnd" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
-
-                <TextView
-                    android:text="@string/estado"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="normal|bold"
-                    android:textColor="?android:attr/textColorPrimary" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:id="@+id/tv_listar_solicitudes_estado"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
                     android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
+                    android:textColor="?android:attr/textColorPrimary" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/paciente_"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="normal|bold"
-                    android:textColor="?android:attr/textColorPrimary" />
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textStyle="normal|bold" />
 
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:id="@+id/tv_listar_solicitudes_paciente"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
                     android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
+                    android:textColor="?android:attr/textColorPrimary" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/habitacion_"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="normal|bold"
-                    android:textColor="?android:attr/textColorPrimary" />
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textStyle="normal|bold" />
 
                 <TextView
+                    android:id="@+id/tv_listar_solicitudes_habitacion"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_listar_solicitudes_habitacion"
+                    android:layout_marginStart="3dp"
                     android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
+                    android:textColor="?android:attr/textColorPrimary" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
                 <TextView
-                    android:text="@string/solicitud"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="normal|bold"
-                    android:textColor="?android:attr/textColorPrimary" />
+                    android:text="@string/solicitud"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textStyle="normal|bold" />
 
                 <TextView
+                    android:id="@+id/tv_listar_solicitudes_solicitud"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_listar_solicitudes_solicitud"
+                    android:layout_marginStart="3dp"
                     android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
+                    android:textColor="?android:attr/textColorPrimary" />
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_listar_solicitudes_descripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_listar_solicitudes_descripcion"
-                android:textColor="?android:attr/textColorPrimary"
                 android:layout_marginTop="10dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:textAlignment="viewStart"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:textColor="?android:attr/textColorPrimary" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
                 <Button
-                    android:text="@string/empezar_progreso"
+                    android:id="@+id/bt_listar_solicitudes_empezar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:id="@+id/bt_listar_solicitudes_empezar" />
+                    android:text="@string/empezar_progreso" />
 
                 <Button
-                    android:text="@string/rechazar"
+                    android:id="@+id/bt_listar_solicitudes_rechazar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/bt_listar_solicitudes_rechazar"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:text="@string/rechazar" />
 
             </LinearLayout>
 
