--- a/app/src/main/res/layout/cardview_mis_solicitudes.xml
+++ b/app/src/main/res/layout/cardview_mis_solicitudes.xml
@@ -6,106 +6,122 @@
     android:layout_marginBottom="15dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_mis_solicitudes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cv_mis_solicitudes">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:background="@drawable/cardview_border"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prioridad"
+                        android:textColor="@android:color/white"
+                        android:textStyle="normal|bold" />
+
+                    <TextView
+                        android:id="@+id/tv_mis_solicitudes_prioridad"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:layout_weight="0.16"
+                        android:text="Emergencia"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_mis_solicitudes_fecha"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="12/02/2016 21:30"
+                        android:textAlignment="textEnd"
+                        android:textColor="@android:color/white" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/estado"
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:textStyle="normal|bold" />
+
+                    <TextView
+                        android:id="@+id/tv_mis_solicitudes_estado"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:layout_weight="1"
+                        android:text="En progreso"
+                        android:textColor="?android:attr/textColorPrimary" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/solicitud"
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:textStyle="normal|bold" />
+
+                    <TextView
+                        android:id="@+id/tv_mis_solicitudes_solicitud"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:layout_weight="1"
+                        android:text="Revisión de la cama que se ha Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquaroto"
+                        android:textColor="?android:attr/textColorPrimary" />
+                </LinearLayout>
 
                 <TextView
-                    android:text="@string/prioridad"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_mis_solicitudes_descripcion"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textStyle="normal|bold" />
-
-                <TextView
-                    android:text="Emergencia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_mis_solicitudes_prioridad"
-                    android:layout_weight="0.16"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
-
-                <TextView
-                    android:text="12/02/2016 21:30"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_mis_solicitudes_fecha"
-                    android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textAlignment="textEnd" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
-
-                <TextView
-                    android:text="@string/estado"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="normal|bold"
+                    android:layout_marginTop="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos"
+                    android:textAlignment="viewStart"
+                    android:textAllCaps="false"
                     android:textColor="?android:attr/textColorPrimary" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_mis_solicitudes_estado"
-                    android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:text="En progreso"
-                    android:layout_marginStart="3dp" />
             </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
-
-                <TextView
-                    android:text="@string/solicitud"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="normal|bold"
-                    android:textColor="?android:attr/textColorPrimary" />
-
-                <TextView
-                    android:text="Revisión de la cama que se ha Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquaroto"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_mis_solicitudes_solicitud"
-                    android:layout_weight="1"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:layout_marginStart="3dp" />
-            </LinearLayout>
-
-            <TextView
-                android:text="Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_mis_solicitudes_descripcion"
-                android:textColor="?android:attr/textColorPrimary"
-                android:layout_marginTop="10dp"
-                android:textAlignment="viewStart"
-                android:textAllCaps="false" />
-
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
