--- a/app/src/main/res/layout/activity_realizar_solicitud.xml
+++ b/app/src/main/res/layout/activity_realizar_solicitud.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_realizar_solicitud"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_inurse_gris"
+    android:background="@color/cardview_light_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -27,22 +27,22 @@
             android:layout_marginTop="0dp"
             android:text="@string/motivo_solicitud"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/colorListViewSelected"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="normal|bold" />
 
         <ListView
             android:id="@+id/lv_realizar_solicitud"
             android:layout_width="match_parent"
-            android:layout_height="125dp"
+            android:layout_height="230dp"
             android:layout_marginTop="10dp"
-            android:background="@android:color/background_light"
+            android:background="@drawable/cardview_border"
             android:choiceMode="singleChoice"
-            android:listSelector="@color/colorListViewSelected" />
+            android:listSelector="@color/colorList" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/prioridad_asignada"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="?android:attr/textColorPrimary"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="15sp"
                 android:textStyle="normal|bold" />
 
@@ -68,31 +68,44 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:text="@string/descripcion_de_la_solicitud"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textColor="?android:attr/textColorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15sp"
             android:textStyle="normal|bold" />
 
         <EditText
             android:id="@+id/et_descripcion_solicitud"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
+            android:background="@drawable/cardview_border"
             android:ems="10"
             android:focusable="false"
+            android:gravity="top"
             android:inputType="textMultiLine"
             android:labelFor="@+id/et_descripcion_solicitud"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:textSize="15sp" />
 
-        <Button
-            android:id="@+id/bt_enviar_solicitud"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="40dp"
-            android:background="@color/colorButton"
-            android:text="@string/enviar_solicitud" />
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/bt_enviar_solicitud"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="0"
+                android:background="@drawable/cardview_border"
+                android:text="@string/enviar_solicitud"
+                android:textColor="@color/colorPrimary" />
+        </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
