--- a/app/src/main/res/layout/activity_rechazar_solicitud.xml
+++ b/app/src/main/res/layout/activity_rechazar_solicitud.xml
@@ -22,38 +22,51 @@
         android:layout_marginTop="10dp">
 
         <TextView
-            android:text="@string/motivo_rechazo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/motivo_rechazo"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textColor="?android:attr/textColorPrimary" />
+            android:textColor="?android:attr/colorPrimaryDark"
+            android:textSize="21sp"
+            android:textStyle="bold" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
             android:id="@+id/tv_motivo_rechazar_solicitud"
-            android:labelFor="@+id/tv_motivo_rechazar_solicitud" />
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/cardview_border"
+            android:ems="10"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:labelFor="@+id/tv_motivo_rechazar_solicitud"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" />
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
             <Button
-                android:text="@string/rechazar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/bt_rechazar_solicitud"
-                android:layout_weight="1" />
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/cardview_border"
+                android:text="@string/rechazar"
+                android:textColor="@color/colorPrimary" />
 
             <Button
-                android:text="@string/cancelar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/bt_cancelar_solicitud"
-                android:layout_weight="1" />
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/cardview_border"
+                android:text="@string/cancelar"
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
 
     </LinearLayout>
