--- a/app/src/main/res/layout/cardview_listar_solicitudes.xml
+++ b/app/src/main/res/layout/cardview_listar_solicitudes.xml
@@ -159,7 +159,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal"
                 android:paddingBottom="5dp"
@@ -168,17 +168,22 @@
 
                 <Button
                     android:id="@+id/bt_listar_solicitudes_empezar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:text="@string/empezar_progreso" />
+                    android:background="@drawable/cardview_border"
+                    android:text="@string/empezar_progreso"
+                    android:textColor="@color/colorPrimary" />
 
                 <Button
                     android:id="@+id/bt_listar_solicitudes_rechazar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:text="@string/rechazar" />
+                    android:background="@drawable/cardview_border"
+                    android:text="@string/rechazar"
+                    android:textColor="@color/colorPrimary" />
 
             </LinearLayout>
 
